// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply variant styles corectly 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0 {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 0.125rem;
  font-weight: 700;
  white-space: nowrap;
  vertical-align: middle;
  background-color: #c2ebd4;
  color: #0f3921;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-1 {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 0.125rem;
  font-weight: 700;
  white-space: nowrap;
  vertical-align: middle;
  background-color: #3ea76a;
  color: #fff;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-2 {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 0.125rem;
  font-weight: 700;
  white-space: nowrap;
  vertical-align: middle;
  box-shadow: inset 0 0 0px 1px #3ea76a;
  color: #3ea76a;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

<div
    class="emotion-3"
    data-chakra-component="CStack"
  >
    <div
      class="emotion-0"
      data-chakra-component="CBadge"
    >
      Subtle
    </div>
    <div
      class="emotion-1"
      data-chakra-component="CBadge"
    >
      Solid
    </div>
    <div
      class="emotion-2"
      data-chakra-component="CBadge"
    >
      Outline
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 0.125rem;
  font-weight: 700;
  white-space: nowrap;
  vertical-align: middle;
  background-color: #EDF2F7;
  color: #1A202C;
}

<div
    class="emotion-0"
    data-chakra-component="CBadge"
  >
    500
  </div>
</DocumentFragment>
`;
